--- a/ltam/modules/web/src/main/webapp/template/common/simplelayout.xhtml
+++ b/ltam/modules/web/src/main/webapp/template/common/simplelayout.xhtml
@@ -21,7 +21,7 @@
     <ui:insert name="head" />
 </h:head>
 
-<h:body>
+<h:body class="SymbilBG Geometry">
         <ui:insert name="content">
             Template
         </ui:insert>
