--- a/ltam/modules/web/src/main/webapp/template/common/template.xhtml
+++ b/ltam/modules/web/src/main/webapp/template/common/template.xhtml
@@ -52,7 +52,7 @@
                                         </div>
                                     </div>
                                 </div>
-                               Powered by Invessence.com<br/>
+                               Powered by <i class="fa fa-copyright"></i>Invessence<br/>
                                 <i class="fa fa-copyright"></i>#{uiLayout.uiprofile.companyname} - All rights reserved.
                             </div>
                         </div>
