Invessence 4 & 5 tickect updation

--- a/invessence/modules/web/src/main/webapp/resources/primefaces-modena/theme.css
+++ b/invessence/modules/web/src/main/webapp/resources/primefaces-modena/theme.css
@@ -5559,7 +5559,7 @@ hr.ui-widget-header {
 .CyanButton {
   background-color: #00ACC1;
 }
-.CyanButton.ui-state-hover .CyanButton.ui-state-focus t {
+.CyanButton.ui-state-hover .CyanButton.ui-state-focus {
   background-color: #26C6DA !important;
 }
 .BrownButton {
@@ -5661,7 +5661,7 @@ hr.ui-widget-header {
 
 
 @media (min-width: 800px) and (max-width:960px) {
-.num-text-align{text-align:left;}
+  .num-text-align{text-align:left;}
   .Fright{text-align:left;}
   /* .ui-tabs .ui-tabs-nav li{width:100%!important;} */
   .ui-tabs .ui-tabs-nav li a{width:100%!important; padding:10px 15px!important; font-size:14px!important;}
@@ -5672,15 +5672,15 @@ hr.ui-widget-header {
   .h1 {height:50px;}
   .t1 {margin-top:10px;}
   .l1 {margin-left:-25px; margin-top:15px;}
-  .head {font-size:20px;}	
-	.tp1 {margin-top:15px;}	
-	.ui-panelgrid {font-size:14px;}
-	
+  .head {font-size:20px;}
+  .tp1 {margin-top:15px;}
+  .ui-panelgrid {font-size:14px;}
+
 }
 /* Portrait tablet to landscape and desktop */
 @media (min-width: 640px) and (max-width:800px) {
 
-.num-text-align{text-align:left;}
+  .num-text-align{text-align:left;}
 
   .Fright{text-align:left;}
   /* .ui-tabs .ui-tabs-nav li{width:100%!important;} */
@@ -5692,12 +5692,12 @@ hr.ui-widget-header {
   .h1 {height:50px;}
   .t1 {margin-top:10px;}
   .l1 {margin-left:-25px; margin-top:15px;}
-  .head {font-size:20px;}	
-	.tp1 {margin-top:15px;}	
-	.ui-panelgrid {font-size:14px;}
-	
-	  
-	 
+  .head {font-size:20px;}
+  .tp1 {margin-top:15px;}
+  .ui-panelgrid {font-size:14px;}
+
+
+
 
 
 }
@@ -5705,7 +5705,7 @@ hr.ui-widget-header {
 
 /* Landscape phone to portrait tablet */
 @media (min-width:480px) and (max-width: 640px) {
-	.num-text-align{text-align:left;}
+  .num-text-align{text-align:left;}
   .hide-mobile{display:none;}
   .Fright{text-align:left;}
   /* .ui-tabs .ui-tabs-nav li{width:100%!important;} */
@@ -5718,16 +5718,18 @@ hr.ui-widget-header {
   .t1 {margin-top:10px;}
   .l1 {margin-left:-30px; margin-top:15px;}
   .invest {text-align:left;}
-   .head {font-size:20px !important;}
-   .tp1 {margin-top:15px;}
-   .tbl_hide {display:none;}
-   .ui-panelgrid {font-size:14px;}
-	
+  .head {font-size:20px !important;}
+  .tp1 {margin-top:15px;}
+  .tbl_hide {display:none;}
+  .ui-panelgrid {font-size:14px;}
+  .mb_contain{width:100% !important;}
+  .tp20 {margin-top:15px;!important;}
+
 
 }
 
 @media (min-width:360px) and (max-width: 480px) {
-	.num-text-align{text-align:left;}
+  .num-text-align{text-align:left;}
   .hide-mobile{display:none;}
   /* .ui-tabs .ui-tabs-nav li{width:100%!important;} */
   .ui-tabs .ui-tabs-nav li a{width:100%!important; padding:10px 3px!important; font-size:12px!important;}
@@ -5738,24 +5740,26 @@ hr.ui-widget-header {
   .ui-fieldset, .ui-fieldset .ui-fieldset-legend{padding:0.3em!important;}
   .h1 {height:50px;}
   .t1 {margin-top:10px;}
-    .l1 {margin-left:-20px; margin-top:15px;}
-	.ui-panelgrid {font-size:13px !important;}
-	.ui-inputfield {font-size:13px !important;}
-	.ui-datatable table tbody tr td {font-size:13px !important;}
-	.ui-datatable table thead tr th, .ui-datatable table tfoot tr td, .ui-datatable table thead tr th {font-size:13px !important;}
-	.ui-radiobutton .ui-radiobutton-box {width:10px !important; height:10px !important;}
-  	.ui-radiobutton .ui-state-active .ui-icon-bullet, .ui-radiobutton .ui-state-focus .ui-icon-bullet {width:10px !important; height:10px !important;}
-  	.ui-selectoneradio label {margin: 1px 12px 0px 0px !important;}
-  	.fltleft td {float:left;}
-  	 .invest {text-align:left;}
-  	 .head {font-size:18px !important;}
-  	 .tp1 {margin-top:0px;}
-  	 .tbl_hide {display:none;}
+  .l1 {margin-left:-20px; margin-top:15px;}
+  .ui-panelgrid {font-size:13px !important;}
+  .ui-inputfield {font-size:13px !important;}
+  .ui-datatable table tbody tr td {font-size:13px !important;}
+  .ui-datatable table thead tr th, .ui-datatable table tfoot tr td, .ui-datatable table thead tr th {font-size:13px !important;}
+  .ui-radiobutton .ui-radiobutton-box {width:10px !important; height:10px !important;}
+  .ui-radiobutton .ui-state-active .ui-icon-bullet, .ui-radiobutton .ui-state-focus .ui-icon-bullet {width:10px !important; height:10px !important;}
+  .ui-selectoneradio label {margin: 1px 12px 0px 0px !important;}
+  .fltleft td {float:left;}
+  .invest {text-align:left;}
+  .head {font-size:18px !important;}
+  .tp1 {margin-top:0px;}
+  .tbl_hide {display:none;}
+  .mb_contain{width:100% !important;}
+  .tp20 {margin-top:15px;!important;}
 }
 
 
 @media (min-width:320px) and (max-width: 360px) {
-	.num-text-align{text-align:left;}
+  .num-text-align{text-align:left;}
   .hide-mobile{display:none;}
   /* .ui-tabs .ui-tabs-nav li{width:100%!important;} */
   .ui-tabs .ui-tabs-nav li a{width:100%!important; padding:10px 3px!important; font-size:12px!important;}
@@ -5768,25 +5772,27 @@ hr.ui-widget-header {
   .h1 {height:50px;}
   .t1 {margin-top:5px;}
   .l1 {margin-left:-20px; margin-top:15px;}
-   .ui-panelgrid {font-size:13px !important;}
-   .ui-inputfield {font-size:13px !important;}
-   .ui-datatable table tbody tr td {font-size:12px !important;}
-   .ui-datatable table thead tr th, .ui-datatable table tfoot tr td, .ui-datatable table thead tr th {font-size:12px !important;}
-   .ui-tabs-panels {font-size:13px !important;}
-   .ui-selectoneradio label {font-size:12px !important;}
-   .ui-radiobutton .ui-radiobutton-box {width:10px !important; height:10px !important;}
-   .ui-radiobutton .ui-state-active .ui-icon-bullet, .ui-radiobutton .ui-state-focus .ui-icon-bullet {width:10px !important; height:10px !important;}
-   .ui-selectoneradio label {margin: 4px 10px 0px 0px !important;}
-   .fltleft td {float:left;}
-    .invest {text-align:left;}
-    .head {font-size:18px !important;}
-     .tp1 {margin-top:0px;}
-     .tbl_hide {display:none;}
-   
+  .ui-panelgrid {font-size:13px !important;}
+  .ui-inputfield {font-size:13px !important;}
+  .ui-datatable table tbody tr td {font-size:12px !important;}
+  .ui-datatable table thead tr th, .ui-datatable table tfoot tr td, .ui-datatable table thead tr th {font-size:12px !important;}
+  .ui-tabs-panels {font-size:13px !important;}
+  .ui-selectoneradio label {font-size:12px !important;}
+  .ui-radiobutton .ui-radiobutton-box {width:10px !important; height:10px !important;}
+  .ui-radiobutton .ui-state-active .ui-icon-bullet, .ui-radiobutton .ui-state-focus .ui-icon-bullet {width:10px !important; height:10px !important;}
+  .ui-selectoneradio label {margin: 4px 10px 0px 0px !important;}
+  .fltleft td {float:left;}
+  .invest {text-align:left;}
+  .head {font-size:18px !important;}
+  .tp1 {margin-top:0px;}
+  .tbl_hide {display:none;}
+  .mb_contain{width:100% !important;}
+  .tp20 {margin-top:15px;!important;}
+
 }
 
 @media (min-width:200px) and (max-width: 320px) {
-	.num-text-align{text-align:left;}
+  .num-text-align{text-align:left;}
   .hide-mobile{display:none;}
   /* .ui-tabs .ui-tabs-nav li{width:100%!important;} */
   .ui-tabs .ui-tabs-nav li a{width:100%!important; padding:10px 3px!important; font-size:12px!important;}
@@ -5808,10 +5814,12 @@ hr.ui-widget-header {
   .ui-radiobutton .ui-radiobutton-box {width:10px !important; height:10px !important;}
   .ui-radiobutton .ui-state-active .ui-icon-bullet, .ui-radiobutton .ui-state-focus .ui-icon-bullet {width:10px !important; height:10px !important;}
   .ui-selectoneradio label {margin: 4px 6px 0px 0px !important;}
-   .fltleft td {float:left;}
-    .invest {text-align:left;}
-    .head {font-size:18px !important;}
-     .tp1 {margin-top:0px;}
-     .tbl_hide {display:none;}
-}	
+  .fltleft td {float:left;}
+  .invest {text-align:left;}
+  .head {font-size:18px !important;}
+  .tp1 {margin-top:0px;}
+  .tbl_hide {display:none;}
+  .mb_contain{width:100% !important;}
+  .tp20 {margin-top:15px;!important;}
+}
 
