--- a/ltam/modules/web/src/main/webapp/template/html/activate.htm
+++ b/ltam/modules/web/src/main/webapp/template/html/activate.htm
@@ -150,7 +150,7 @@
                             <br/><br/>
                             <p>Thank you for setting up your account on Symbil.</p>
 
-                            <p>Please <a href="'0'/activate.xhtml?u='1'&amp;r='2'" target="_symbil">click here to activate
+                            <p>Please <a href="'0'/activate.xhtml?u='1'&r='2'" target="_symbil">click here to activate
                                 your account</a>.</p>
 
                             <p>
