--- a/ltam/modules/web/src/main/webapp/template/html/locked.htm
+++ b/ltam/modules/web/src/main/webapp/template/html/locked.htm
@@ -156,7 +156,7 @@
                             <p><strong>NOTE: This link is valid for one use only.</strong>
                             </p>
 
-                            <p>To reset your password <a href="'0'/reset.xhtml?u='1'&amp;r='2'" target="_symbil">click
+                            <p>To reset your password <a href="'0'/reset.xhtml?u='1'&r='2'" target="_symbil">click
                                 here</a>.</p>
                         </td>
                     </tr>
