--- a/ltam/modules/web/src/main/webapp/template/html/reset.htm
+++ b/ltam/modules/web/src/main/webapp/template/html/reset.htm
@@ -123,7 +123,7 @@
                         <p><strong>NOTE: This link is valid for one use only.</strong>
                         </p>
                         <br/>
-                        <p><a href="'0'/reset.xhtml?u='1'&amp;r='2'" target="_symbil">RESET MY PASSWORD</a>.</p>
+                        <p><a href="'0'/reset.xhtml?u='1'&r='2'" target="_symbil">RESET MY PASSWORD</a>.</p>
                     </td>
                 </tr>
                 </tbody>
