--- a/ltam/modules/web/src/main/webapp/template/common/topbar.xhtml
+++ b/ltam/modules/web/src/main/webapp/template/common/topbar.xhtml
@@ -19,17 +19,27 @@
                             library="#{uiLayout.uiprofile.logolib}" />
         </a>
 
-        <a id="show-top-menu" class="ShowOnMobile ripplelink black SymbilGreen">
-            <i class="icon-more_vert" id="active"></i>
-            <i class="icon-close DispNone" id="passive"></i>
-        </a>
-
         <ui:fragment rendered="#{webutil.isUserLoggedIn()}">
+            <a id="show-top-menu" class="ShowOnMobile ripplelink black SymbilGreen">
+                <i class="icon-more_vert" id="active"></i>
+                <i class="icon-close DispNone" id="passive"></i>
+            </a>
+
             <ul id="top-menu">
                 <li>
-                    <a href="/pages/common/myprofile.xhtml">
-                        <i class="icon-cog SymbilBlue"></i><span class="ShowOnMobile">Settings</span>
-                    </a>
+                        <a class="Animated05 CursPointer"><i class="icon-cog SymbilBlue"></i> Settings
+                            <i class="fa fa-chevron-down Fs14 Fright ShowOnMobile"></i></a>
+                        <ul class="Animated03 submenu">
+                            <li><a class="Animated05" href="/pages/common/myprofile.xhtml">
+                                <i class="fa fa-user"></i>Profile
+                                </a>
+                            </li>
+                            <li><a href="/pages/consumer/address.xhtml" class="Animated05">
+                                <i class="fa fa-envelope"></i>Account
+                                </a>
+                            </li>
+                        </ul>
+
                 </li>
                 <li>
                     <p:commandLink id="ajax" styleClass="SymbilRed" actionListener="#{uiLayout.logout}">
