--- a/ltam/modules/web/src/main/webapp/template/common/topbar.xhtml
+++ b/ltam/modules/web/src/main/webapp/template/common/topbar.xhtml
@@ -1,12 +1,12 @@
-<ui:composition 
+<ui:composition
 
-    xmlns="http://www.w3.org/1999/xhtml"
-    xmlns:f="http://java.sun.com/jsf/core"
-    xmlns:h="http://java.sun.com/jsf/html"
-    xmlns:ui="http://java.sun.com/jsf/facelets"
-    xmlns:p="http://primefaces.org/ui">
-    
-    
+        xmlns="http://www.w3.org/1999/xhtml"
+        xmlns:f="http://java.sun.com/jsf/core"
+        xmlns:h="http://java.sun.com/jsf/html"
+        xmlns:ui="http://java.sun.com/jsf/facelets"
+        xmlns:p="http://primefaces.org/ui">
+
+
     <!-- TOPBAR START -->
     <div id="layout-topbar">
         <a id="mobile-menu-button">
@@ -16,7 +16,7 @@
         </a>
         <a href="#" id="logo">
             <h:graphicImage name="#{uiLayout.uiprofile.logo}" styleClass="Fleft"
-                            library="#{uiLayout.uiprofile.logolib}" />
+                            library="#{uiLayout.uiprofile.logolib}"/>
         </a>
 
         <ui:fragment rendered="#{webutil.isUserLoggedIn()}">
@@ -25,32 +25,35 @@
                 <i class="icon-close DispNone" id="passive"></i>
             </a>
 
-            <ul id="top-menu">
-                <li>
+                <ul id="top-menu">
+                    <li>
                         <a class="Animated05 CursPointer"><i class="icon-cog SymbilBlue"></i> Settings
                             <i class="fa fa-chevron-down Fs14 Fright ShowOnMobile"></i></a>
                         <ul class="Animated03 submenu">
                             <li><a class="Animated05" href="/pages/common/myprofile.xhtml">
                                 <i class="fa fa-user"></i>Profile
-                                </a>
+                            </a>
                             </li>
+                            <ui:fragment rendered="#{webutil.hasAccess('USER')}">
                             <li><a href="/pages/consumer/address.xhtml" class="Animated05">
                                 <i class="fa fa-envelope"></i>Account
-                                </a>
+                            </a>
                             </li>
+                            </ui:fragment>
                         </ul>
 
-                </li>
-                <li>
-                    <p:commandLink id="ajax" styleClass="SymbilRed" actionListener="#{uiLayout.logout}">
-                        <i class="icon-lock_open"></i> Sign-off
-                    </p:commandLink>
-                </li>
+                    </li>
+                    <li>
+                        <p:commandLink id="ajax" styleClass="SymbilRed" actionListener="#{uiLayout.logout}">
+                            <i class="icon-lock_open"></i> Sign-off
+                        </p:commandLink>
+                    </li>
 
-            </ul>
-        </ui:fragment>
+                </ul>
+            </ui:fragment>
+
 
     </div>
     <!-- TOPBAR END -->
-    
+
 </ui:composition>
