LTAM version 3,0 - Introducing Web-Service integration

--- a/ltam/modules/web/src/main/webapp/resources/opensans-layout/css/modena-layout.css
+++ b/ltam/modules/web/src/main/webapp/resources/opensans-layout/css/modena-layout.css
@@ -579,9 +579,9 @@ a {
 img {
   outline: none;
 }
-li {
-  list-style: none;
-}
+/*
+li {list-style: none;}
+*/
 /* seperator line */
 .Separator {
   border-bottom: solid 1px #E0E0E0;
