LTAM version 3,0 - Introducing Web-Service integration

--- a/ltam/modules/web/src/main/webapp/template/common/topbar.xhtml
+++ b/ltam/modules/web/src/main/webapp/template/common/topbar.xhtml
@@ -34,7 +34,7 @@
                                 <i class="fa fa-user"></i>Profile
                             </a>
                             </li>
-                            <ui:fragment rendered="#{webutil.hasAccess('USER')}">
+                            <ui:fragment rendered="false">
                             <li><a href="/pages/consumer/address.xhtml" class="Animated05">
                                 <i class="fa fa-envelope"></i>Account
                             </a>
