UI/UX changes done by Prakash

--- a/ltam/modules/web/src/main/webapp/resources/ltam/css/ltam.css
+++ b/ltam/modules/web/src/main/webapp/resources/ltam/css/ltam.css
@@ -87,7 +87,7 @@
 .SymbilBG.Geometry {
     background-image: url("#{resource['ltam:images/train.jpg']}");
     background-attachment: fixed;
-    background-size: 100%;
+    background-size: cover;
     background-repeat: no-repeat;
 }
 
