--- a/ltam/modules/web/src/main/webapp/resources/opensans-layout/css/core-layout.css
+++ b/ltam/modules/web/src/main/webapp/resources/opensans-layout/css/core-layout.css
@@ -35,6 +35,7 @@ h1, h2, h3, h4, h5, h6{ margin:0px !important;}
 .Responsive{}
 .Responsive50{}
 .Responsive100{}
+.Responsive50P{}
 
 /* Text Decoration */
 .Underline{ text-decoration:underline;}
@@ -322,7 +323,7 @@ input[type="text"], input[type="password"], textarea{ -webkit-appearance: none; 
 	/* responsive support */
 	.Responsive{width:33.3%; float:left; margin-left:0px !important; margin-right:0px !important;}
 	.Responsive50{width:50%; float:left; margin-left:0px !important; margin-right:0px !important;}
-.Responsive50P{width:50%;}
+    .Responsive50P{width:50%;}
 	.Responsive100{width:100%; float:left; margin-left:0px !important; margin-right:0px !important;}
     
     /* make auto of element width attribute on mobile devices with media queries */
