--- a/ltam/modules/web/src/main/webapp/resources/opensans-layout/css/core-layout.css
+++ b/ltam/modules/web/src/main/webapp/resources/opensans-layout/css/core-layout.css
@@ -524,6 +524,7 @@ input[type="text"], input[type="password"], textarea{ -webkit-appearance: none; 
 }
 
 /********************Prakash Lal***********************/
+
 .textAlign {
 text-align: center;	
 }
@@ -546,7 +547,7 @@ text-align: center;
 }
 
 .layout-portlets-box > .Container100 > .ContainerIndent {
-	width: 1190px;
+	width: 1170px;
 }
 
 .InputBlockMargin {
@@ -561,11 +562,43 @@ text-align: center;
 {
 	text-align: center;
 }
+
+.ReviewRadioBtnP > table > tbody > tr {
+	float: left;
+}
+
+.ReviewRadioBtnP > table {
+	margin:0 auto;
+}
+
+.textBold {
+	font-weight:bold;
+}
+
+.ThankyouBG {
+background:rgba(178, 235, 242, 0.58)!important;
+}
+
 .Mobilelabel {
 //	display: none;
 }
-.Wid90P {}
-/**/
+
+@media (max-width:920px) {
+	.PaddingblocktradeP > div > div > div {
+	padding:0 10px;
+	}
+	
+.ThankyBlockMain {
+width:100%!important;
+}	
+}
+
+@media (min-width:846px) and (max-width:922px) {
+.ReviewRadioBtnP > table > tbody > tr > td > label {
+	font-size: 14px;
+}	
+}
+
 @media (min-width: 836px) and (max-width: 3000px) {
 .IconWidthP {
 	width:5%!important;
@@ -580,6 +613,10 @@ padding: 0 5px;
 }
 
 @media (max-width:835px){
+.ReviewRadioBtnP > table > tbody > tr {
+	float: none!important;
+}
+	
 	.DashboardIconBlock > div {
 	//text-align: left!important;
 	//width:100%!important;
@@ -649,7 +686,17 @@ width: 80%!important;
 	height: 1px;
 }
 }
-@media (min-width:1201px) and (max-width: 1400px)  {
+@media (min-width:1321px) and (max-width: 1400px)  {
+.layout-portlets-box > .Container100 > .ContainerIndent {
+	width: 990px;
+}
+	}
+
+@media (min-width:1201px) and (max-width: 1320px)  {
+.ui-steps .ui-steps-title {
+	margin-left:-8px!important;
+}
+
 	.ui-panelgrid-footer {
     text-align: center!important;
 }
@@ -672,20 +719,34 @@ width: 90%!important;
 }
 }
 
-@media (min-width:1201px) and (max-width: 1320px)  {
+@media (min-width:1201px) and (max-width:1320px)  {
 	.layout-portlets-box > .Container100 > .ContainerIndent {
 	width: 855px;
 }
 }
-@media (min-width:1000px) and (max-width: 1200px)  {
+@media (min-width:1000px) and (max-width:1110px) {
+	.layout-portlets-box > .Container100 > .ContainerIndent {
+	width: 805px;
+}
+
+.ui-steps .ui-steps-title {
+    margin-left: 8px;
+}	
+}
+
+@media (min-width:1111px) and (max-width: 1200px)  {
 	.layout-portlets-box > .Container100 > .ContainerIndent {
 	width: 805px;
 }
 .ui-steps .ui-steps-title {
-    margin-left: -4px;
+    margin-left: -7px;
 }
 }
 @media (min-width:800px) and (max-width: 960px)  {
+	.ui-steps-title {
+	visibility: hidden;
+	}
+	
 	.layout-portlets-box > .Container100 > .ContainerIndent {
 	    width: 720px!important;
     font-size: 12px!important;
@@ -693,13 +754,20 @@ width: 90%!important;
 }
 
 @media (min-width:730px) and (max-width: 800px)  {
+	.ui-steps-title {
+	visibility: hidden;
+	}
+	
 	.layout-portlets-box > .Container100 > .ContainerIndent {
-	    
     font-size: 12px!important;
 }
 }
 
 @media (min-width:641px) and (max-width: 729px)  {
+	.ui-steps-title {
+	visibility: hidden;
+	}
+	
 	.layout-portlets-box > .Container100 > .ContainerIndent {
 	    width: 540px;
     font-size: 12px!important;
@@ -707,6 +775,10 @@ width: 90%!important;
 }
 
 @media (min-width:561px) and (max-width: 639px)  {
+	.ui-steps-title {
+	visibility: hidden;
+	}
+	
 	.layout-portlets-box > .Container100 > .ContainerIndent {
 	    width: 490px;
     font-size: 12px!important;
@@ -755,6 +827,161 @@ width: 90%!important;
 }
 }
 
+.layout-portlets-box > .Container100 > .UIstepsSevenP  > .ContainerIndent {
+	width: 847px;
+}
+
+/***7-Steps****/
+@media (min-width:1321px) and (max-width: 1400px)  {
+.layout-portlets-box > .Container100 > .UIstepsSevenP > .ContainerIndent {
+	width: 990px;
+}
+	}
+
+@media (min-width:1201px) and (max-width: 1320px)  {
+.ui-steps .ui-steps-title {
+	margin-left:-8px!important;
+}
+
+	.ui-panelgrid-footer {
+    text-align: center!important;
+}
+	.CenterfaSpacing {
+	width: 28%!important;
+	height: 1px;
+}
+}
+@media (min-width:651px) and (max-width: 800px)  {
+.ui-panelgrid-footer {
+    text-align: center!important;
+    width:91%;
+}
+	.CenterfaSpacing {
+	width: 8%!important;
+	height: 1px;
+}
+.ResponsivePFA {
+width: 90%!important;	
+}
+}
+
+@media (min-width:1201px) and (max-width:1320px)  {
+	.layout-portlets-box > .Container100 > .UIstepsSevenP > .ContainerIndent {
+	width: 602px;
+}
+}
+@media (min-width:1000px) and (max-width:1110px) {
+	.layout-portlets-box > .Container100 > .UIstepsSevenP > .ContainerIndent {
+	width: 602px;
+}
+
+.ui-steps .ui-steps-title {
+    margin-left: 8px;
+}	
+}
+
+@media (min-width:1111px) and (max-width: 1200px)  {
+	.layout-portlets-box > .Container100 > .UIstepsSevenP > .ContainerIndent {
+	width: 632px;
+}
+.ui-steps .ui-steps-title {
+    margin-left: -7px;
+}
+}
+
+@media (min-width:961px) and (max-width: 999px)  {
+	.layout-portlets-box > .Container100 > .UIstepsSevenP > .ContainerIndent {
+	    width: 637px;
+	}
+}
+
+@media (min-width:800px) and (max-width: 960px)  {
+	.ui-steps-title {
+	visibility: hidden;
+	}
+	
+	.layout-portlets-box > .Container100 > .UIstepsSevenP > .ContainerIndent {
+	    width: 497px!important;
+    font-size: 12px!important;
+}
+}
+
+@media (min-width:730px) and (max-width: 800px)  {
+	.ui-steps-title {
+	visibility: hidden;
+	}
+	
+	.layout-portlets-box > .Container100 > .UIstepsSevenP > .ContainerIndent {
+    font-size: 12px!important;
+    width:462px;
+}
+}
+
+@media (min-width:641px) and (max-width: 729px)  {
+	.ui-steps-title {
+	visibility: hidden;
+	}
+	
+	.layout-portlets-box > .Container100 > .UIstepsSevenP > .ContainerIndent {
+	  width: 357px;
+    font-size: 12px!important;
+}
+}
+
+@media (min-width:561px) and (max-width: 639px)  {
+	.ui-steps-title {
+	visibility: hidden;
+	}
+	
+	.layout-portlets-box > .Container100 > .UIstepsSevenP > .ContainerIndent {
+	    width: 287px;
+    font-size: 12px!important;
+}
+}
+
+@media (min-width:481px) and (max-width: 560px)  {
+	.layout-portlets-box > .Container100 > .UIstepsSevenP > .ContainerIndent {
+	    width: 186px;
+}
+.InputWidthP
+{
+	width: 100%!important;
+	    margin: 5px 0;
+}
+
+.CenterAlignP, .AddressBlockAlign  {
+	text-align:center!important;
+	    float: none;
+}
+}
+
+@media (min-width:361px) and (max-width: 480px)  {
+	.layout-portlets-box > .Container100 > .UIstepsSevenP > .ContainerIndent {
+	    width: 170px;
+}
+}
+
+@media (min-width:200px) and (max-width: 360px)  {
+	.layout-portlets-box > .Container100 > .UIstepsSevenP > .ContainerIndent {
+	   width: 161px;
+}
+.ui-steps .ui-steps-item {
+	background: none;
+	width: 22px;
+}
+.InputWidthP
+{
+	width: 100%!important;
+	    margin: 5px 0;
+}
+
+.CenterAlignP, .AddressBlockAlign  {
+	text-align:center!important;
+    float: none;
+}
+}
+
+
 @media (min-width:360px) and (max-width: 480px) {
 .InputWidthP
 {
@@ -765,6 +992,7 @@ width: 90%!important;
 	text-align:center!important;
 	    float: none;
 }
+
 	/*vivek CSS */
 	.tab_main {
 	    /*margin: 0 34px;*/
